--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,20 +21,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind screen;
-@tailwind utilities;
 
-@layer components {
-  .footer {
-    @apply grid grid-cols-footer md:grid-cols-footer_md grid-rows-footer md:grid-rows-footer_md pt-8 pb-2 w-full gap-2 text-white text-center bg-gradient-to-r from-octopus-500 via-octopus_accent-500 to-octopus_bg-500;
-    
-  }
-  nav ul li {
-    @apply block my-2 uppercase md:inline-block;
-    a {
-      @apply tracking-widest hover:underline hover:font-semibold;
-    }
-  }
+@font-face {
+  font-family: "Raleway";
+  src: local("Raleway"),
+    url(../fonts/Raleway-VariableFont_wght.ttf) format("truetype");
 }
+
+@font-face {
+  font-family: "Merriweather";
+  src: local("Merriweather"),
+    url(../fonts/Merriweather-Regular.ttf) format("truetype");
+}
+
+@tailwind utilities;
 /**
  * Import layouts
  * It's a best practice to use a different partial for each page
